BPER/DEVF/force-app/main/default/objects/Canvas__mdt/Canvas__mdt.object-meta.xml
<CustomObject>
    <label>Canvas</label>
    <pluralLabel>Canvas</pluralLabel>
</CustomObject>