BPER/DEVF/force-app/main/default/objects/Canvas__mdt/fields/Check_Show_Canvas__c.field-meta.xml
<CustomField>
    <fullName>Check_Show_Canvas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Show Canvas</label>
    <type>Checkbox</type>
</CustomField>