BPER/DEVF/force-app/main/default/objects/Canvas__mdt/fields/Check_Show_Canvas_Condition__c.field-meta.xml
<CustomField>
    <fullName>Check_Show_Canvas_Condition__c</fullName>
    <label>Check Show Canvas Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>