BPER/DEVF/force-app/main/default/objects/Canvas__mdt/fields/Connected_App__c.field-meta.xml
<CustomField>
    <fullName>Connected_App__c</fullName>
    <description>Nome della connected App associata al canvas</description>
    <label>Connected App</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>