BPER/DEVF/force-app/main/default/objects/Canvas__mdt/fields/Url_base__c.field-meta.xml
<CustomField>
    <fullName>Url_base__c</fullName>
    <description>url base del sito da invocare</description>
    <label>Url base</label>
    <required>true</required>
    <type>Url</type>
</CustomField>