BPER/DEVF/force-app/main/default/objects/Canvas__mdt/fields/Url_parameters__c.field-meta.xml
<CustomField>
    <fullName>Url_parameters__c</fullName>
    <description>elenco parametri</description>
    <label>Url parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>