BPER/DEVF/force-app/main/default/objects/Canvas__mdt/fields/Url_path__c.field-meta.xml
<CustomField>
    <fullName>Url_path__c</fullName>
    <label>Url path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>